--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,6 @@
 @import 'interface'
 @import 'blocks/header'
 @import 'blocks/section-menu'
+@import 'blocks/section-about'
+@import 'blocks/events'
 @import 'blocks/adaptive'
