--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -108,6 +108,14 @@
         width: 100%
       & .content 
         margin-top: 50px 
+@media screen and ( max-width: 770px )
+  .reservations
+    padding: 90px 0 120px 0
+    & .reservations-wrap 
+      flex-direction: column 
+      & .block 
+        width: 100%
+        margin-top: 30px 
 @media screen and ( max-width: 640px )
   .section-menu 
     & .menu-wrap2 
@@ -119,6 +127,23 @@
           margin-left: 0
           &:last-of-type
             margin-top: 50px 
+@media screen and ( max-width: 600px )
+  .footer
+    & .footer-wrap 
+      flex-direction: column 
+      & .block 
+        display: flex 
+        flex-direction: column 
+        align-items: center
+        width: 100%
+        & .content 
+          text-align: center
+          & .footer-social
+            text-align: center
+      & .navigation 
+        margin-top: 50px 
+      & .visit 
+        margin-top: 50px 
 @media screen and ( max-width: 500px )
   .section-about
     & .section-about-wrap
