--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,4 +3,6 @@
 @import 'blocks/section-menu'
 @import 'blocks/section-about'
 @import 'blocks/events'
+@import 'blocks/reservations'
+@import 'blocks/footer'
 @import 'blocks/adaptive'
